src/test/resources/frontendReference/invalid/syntaxErr/variables/badintAssignments1.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:13 -- extraneous input '0' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'end', ';'}
1 parser error(s) detected, no further compilation attempted.
